--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -234,6 +234,42 @@
     "joblib.dump(model, f'output/lr_model.pkl')\n",
     "joblib.dump(vect,  f'output/lr_cvectorizer.joblib')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "model = joblib.load(f'output/lr_model.pkl')\n",
+    "vect  = joblib.load(f'output/lr_cvectorizer.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "72.5 µs ± 132 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "predictions = model.predict(vect.transform(['hahah test 123']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
